_sass/projects: fix overflow for non-python
Code blocks all have the `highlighter-rouge` class, so we should use
that instead of the language-specific class. Otherwise the style is
only applied to python and not others.

--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -7,7 +7,7 @@
 }
 
 // make sure code takes up less than window height
-.language-python {
+.highlighter-rouge {
     max-height: 80vh;
     overflow: auto;
 }
